--- a/blog/requirements.txt
+++ b/blog/requirements.txt
@@ -8,6 +8,7 @@ identify==2.4.0
 nodeenv==1.6.0
 platformdirs==2.4.0
 pre-commit==2.15.0
+python-decouple==3.5
 pytz==2021.3
 PyYAML==6.0
 six==1.16.0
